--- a/index.html
+++ b/index.html
@@ -2,20 +2,23 @@
 <html>
     <head>
         <title>task3</title>
+        <link rel="icon" type="image/jpg" href="bg-showcase-1.jpg">
         <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="responsive.css">
         <script src="https://kit.fontawesome.com/7d9352f810.js" crossorigin="anonymous"></script>
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Alegreya:ital@1&family=Petrona:ital,wght@1,100&family=Piazzolla:wght@100&family=Roboto+Mono:wght@200&display=swap" rel="stylesheet">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
-    <header class="header-sec" id="home">
-        <h3 class="header-title">Start Bootstrap</h3>
-        <button class="sign-in-button">Sign In</button>
-    </header>
     <body>
+        <header class="header-sec" id="home">
+            <h3 class="header-title">Start Bootstrap</h3>
+            <button class="sign-in-button">Sign In</button>
+        </header>
         <div class="background-image-parent" >
             <img class="background-image" src="bg-masthead.jpg" alt="backgroundimage">
             <div class="image-sec">
-                <h1 class="image-text">Build a landing page for your business<br> or project and generate more leads!</h1>
+                <h1 class="image-text">Build a landing page for your business or project and generate more leads!</h1>
                 <form class="sign-up-form">
                     <input type="email" class="email" name="email" placeholder="Enter your email...">
                     <button class="sign-up-botton">sign-up</button>
@@ -40,30 +43,30 @@
             </div>
         </div>
         <div class="third-sec-banner">
-            <div class="third-first-content">
+            <div class="third-first-content order1">
                 <h3 class="third-first-title" >Fully Responsive Design</h3>
                 <p class="third-first-para">When you use a theme created by Start Bootstrap, you know that the theme will look great on any device, whether it's a phone, tablet, or desktop the page will behave responsively!</p>
             </div>
-            <div class="third-first-image">
-                <img src="bg-showcase-1.jpg" alt="mobile" height="480" width="640">
+            <div class="third-first-image order2">
+                <img class="third-order-image" src="bg-showcase-1.jpg" alt="mobile">
             </div>
         </div>
         <div class="third-sec-banner">
             <div class="third-first-image">
-                <img src="bg-showcase-2.jpg" alt="coding" height="480" width="640">
+                <img class="third-order-image" src="bg-showcase-2.jpg" alt="coding">
             </div>
             <div class="third-first-content">
                 <h3 class="third-first-title" >Updated For Bootstrap 4</h3>
                 <p class="third-first-para">Newly improved, and full of great utility classes, Bootstrap 4 is leading the way in mobile responsive web development! All of the themes on Start Bootstrap are now using Bootstrap 4!</p>
             </div>
         </div>
-        <div class="third-sec-banner">
-            <div class="third-first-content">
+        <div class="third-sec-banner" >
+            <div class="third-first-content order1">
                 <h3 class="third-first-title" >Easy to Use & Customize</h3>
                 <p class="third-first-para">Landing Page is just HTML and CSS with a splash of SCSS for users who demand some deeper customization options. Out of the box, just add your content and images, and your new landing page will be ready to go!</p>
             </div>
-            <div class="third-first-image">
-                <img src="bg-showcase-3.jpg" alt="kid" height="480" width="640">
+            <div class="third-first-image order2">
+                <img class="third-order-image" src="bg-showcase-3.jpg" alt="kid">
             </div>
         </div>
         <div class="people-sec">
@@ -91,30 +94,30 @@
             <div class="image-sec-bottom">
                 <h1 class="image-text-bottom">Ready to get started? Sign up now!</h1>
                 <form class="sign-up-form-bottom">
-                    <input type="email-bottom" class="email" name="email" placeholder="Enter your email...">
+                    <input type="email-bottom" class="email-bottom" name="email" placeholder="Enter your email...">
                     <button class="sign-up-botton-bottom">sign-up</button>
                 </form>
             </div>
         </div>
+        <div class="footer-height"></div>
         <footer class="footer-sec">
             <div class="footer-left">
-            <ul>
-                <li><a href="#home">About</a></li>
-                <li class="ae"> . </li>
-                <li><a href="#home">Contact</a></li>
-                <li class="ae"> . </li>
-                <li><a href="#home">Terms of Use</a></li>
-                <li class="ae"> . </li>
-                <li><a href="#home">Privacy Policy</a></li>
-            </ul>
-            <p class="footer-para">© Your Website 2020. All Rights Reserved.</p>
-        </div>
-        <div class="footer-right">
-            <a href="#home"><i class="fab fa-facebook"></i></a>
-            <a href="#home"><i class="fab fa-twitter-square"></i></a>
-            <a href="#home"><i class="fab fa-instagram"></i></a>
-        </div>
-
+                <ul>
+                    <li><a href="#home">About</a></li>
+                    <li class="ae"> . </li>
+                    <li><a href="#home">Contact</a></li>
+                    <li class="ae"> . </li>
+                    <li><a href="#home">Terms of Use</a></li>
+                    <li class="ae"> . </li>
+                    <li><a href="#home">Privacy Policy</a></li>
+                </ul>
+                <p class="footer-para">© Your Website 2020. All Rights Reserved.</p>
+            </div>
+            <div class="footer-right">
+                <a href="#home"><i class="fab fa-facebook"></i></a>
+                <a href="#home"><i class="fab fa-twitter-square"></i></a>
+                <a href="#home"><i class="fab fa-instagram"></i></a>
+            </div>
         </footer>
     </body>
 </html>
